public/main.css
/* ... */
.state-winners-table__state-winner,
.state-winners-table__federal-winner {
  width: 20%;
  text-align: right;
  padding-right: .5em;
}

/*.state-winners-table__state-winner.dem,
.state-winners-table__federal-winner.dem {
  color: #a2c1e1;
}

.state-winners-table__state-winner.gop,
.state-winners-table__federal-winner.gop {
  color: #f4a098;
}*/


.state-winners-table__winning-pct-state,
.state-winners-table__winning-pct-federal {
  width: 25%;
  padding: 0.3em 0;
}


.state-winners-table__winning-pct-bar {
  height: 1em;
  margin-right: 0.3em;
  float: left;
  background-color: #999;
}

.state-winners-table__winning-pct-bar.gop {
  background-color: #e03d46;
}

.state-winners-table__winning-pct-bar.dem {
  background-color: #579DD5;
}

.state-winners-table__republicans.gop-winner {
  color: #e03d46;
  font-weight: bold;
}

.state-winners-table__dems.dem-winner {
  color: #579DD5;
  font-weight: bold;
}

.state-winners-table__winning-pct-state-figure,
.state-winners-table__winning-pct-federal-figure {
  text-align: right;
}

.state-winners-table__winning-pct-state-figure {
  padding-right: 0.5em;
}

.state-winners-table__winning-pct-federal-figure {
  padding-right: 0;
}

/* electoral college breakdown*/

.ec-breakdown-bar{
     display:inline-block; 
     background-color:#000;
     height:100%;
     color:#FFF;
}

.ec-breakdown-bar-container{
    padding-left: 3px;
}

.ec-breakdown-row{
    height:20px;
    overflow:hidden;
    margin-bottom: 1px;
}

.ec-breakdown-header{
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    color: #555555;
    font-size: 14px;
}
.ec-breakdown-statelabel{
    overflow:visible;
    text-align: right;
    padding: 0px;
    font-size: 14px;
    color: #333333;
}

.ec-breakdown-bar-label {
  text-align: right;
  font-feature-settings: "tnum";
  font-size: 15px;
}

.Toss-up {
  margin: 0 8.33333%;
}

.Toss-up .ec-breakdown-header {
    font-weight: 600;
  }

